kubernetes/kustomize/system/prod-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: public-ingress
  labels:
    pod-security.kubernetes.io/enforce: restricted
